--- a/public/index.html
+++ b/public/index.html
@@ -39,15 +39,15 @@
 
       ReactDOM.render(
         <form name="contact" method="post">
-          <input type="hidden" name="form-name" value="contact" />
+        
           <p>
-            <label>Your Name: <input type="text" name="name"/></label>
+            <label>Your Name: <input type="text" name="firstName"/></label>
           </p>
           <p>
             <label>Your Email: <input type="email" name="email"/></label>
           </p>
           <p>
-            <label>Message: <textarea name="message"></textarea></label>
+            <label>Message: <textarea name="comment"></textarea></label>
           </p>
           <p>
             <button type="submit">Send</button>
